[gd_scene load_steps=2 format=3 uid="uid://b4nak2j8x5p1q"]

[ext_resource type="Script" path="res://scripts/ui/shop_ui.gd" id="1_k5n8m"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_k5n8m")

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
text = "ร้านอุปกรณ์ดับเพลิง"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
text = "เงิน: 1000 บาท"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="ShopPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
text = "เลือกอุปกรณ์เพื่อดูรายละเอียด"
autowrap_mode = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="ShopPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ซื้อ"

[node name="CloseButton" type="Button" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
text = "ปิด"